# tennis-pipeline

./: AO_2026.xlsx  AO_2026_Report.xlsx  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: _old.csv  ao_base.csv  baseline.csv  baseline_dists.pkl  integrity_thresholds.json  out.csv  raw_normalized_stats.csv  sofascore.json
docs/: integrity.md
notebooks/: 01_preparation.qmd  02_base.qmd  02_baseline.qmd  03_scraper.qmd  match_13300898.json
src/: __init__.py
src/dashboard/: __init__.py  app.py  data_access.py
src/dashboard/tabs/: baseline.py  historical_baseline.py
src/flows/: __init__.py  pipeline.py
src/models/: tennis_models.py
src/pipeline/: config.py
src/pipeline/flows/: pipeline.py
src/pipeline/models/: tennis_models.py
src/pipeline/stats/: __init__.py  calculators.py  likelihood.py
src/pipeline/tasks/: match_id.py  match_stats.py
src/stats/: calculators.py
src/tasks/: ingeston.py  match_id.py  match_stats.py
