[project.scripts]
run-pipeline = "src.flows.pipeline:run_pipeline"

[project]
name = "tennis-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.14.0",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "prefect>=3.6.10",
    "scipy>=1.17.0",
]
