[project]
name = "tennis-pipeline"
version = "0.1.0"
description = "SofaScore AO 2026 Integrity Engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prefect>=3.0.0",
    "curl-cffi>=0.7.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "streamlit>=1.41.0", # Added streamlit here
    "plotly>=6.5.2",
    "scipy>=1.17.0",
]

[tool.uv]
managed = true
package = false

[project.scripts]
run-pipeline = "src.flows.pipeline:main"
run-dashboard = "streamlit.web.cli:main"

