[project]
name = "tennis-pipeline"
version = "0.1.0"
description = "SofaScore AO 2026 Integrity Engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.14.0",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "prefect>=3.6.10",
    "scipy>=1.17.0",
    "streamlit>=1.41.1",
]

[tool.uv]
managed = true
package = false

[project.scripts]
run-pipeline = "src.pipeline.flows.pipeline:run_pipeline"

[tool.uv.scripts]
run-dashboard = { cmd = "streamlit run src/dashboard/app.py" }

